--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 server.address=localhost
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/TEST_DB?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=test_user
+spring.datasource.url=jdbc:mysql://localhost:3306/TEST_DB?useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 # mysql ??
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
