--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.address=localhost
 server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/TEST_DB?useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=test_user
+spring.datasource.password=Test1234!
 
 # mysql 설정
 spring.jpa.database=mysql
