--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
-server.address=localhost
+server.address=0.0.0.0
 server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test_db?useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=test_user
 spring.datasource.password=Test1234!
 
-# mysql 설정
+# mysql \uC124\uC815
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
-# logging level 설정
+# logging level \uC124\uC815
 logging.level.org.hibernate=info
 
-# SQL 쿼리문 노출 설정
+# SQL \uCFFC\uB9AC\uBB38 \uB178\uCD9C \uC124\uC815
 spring.jpa.properties.hibernate.show_sql=true
-# SQL 포맷팅
+# SQL \uD3EC\uB9F7\uD305
 spring.jpa.properties.hibernate.format_sql=true
-# SQL 어디서 타는지 위치 노출
+# SQL \uC5B4\uB514\uC11C \uD0C0\uB294\uC9C0 \uC704\uCE58 \uB178\uCD9C
 spring.jpa.properties.hibernate.use_sql_comments=true
